--- a/Network Security/Captive Portal - NAC/Readme
+++ b/Network Security/Captive Portal - NAC/Readme
@@ -1,1 +1,2 @@
 CPSPAM - Watch the network active clients and find clients that are inactive and find clients that have left the network
+sudo perl -MPCAN -e 'install NetPacket::IP'
